# VERISAtlas

./: .gitignore  Dockerfile  README.md  api.py  data_model.py  db.py  docker-compose.yml  parse_json.py  pyproject.toml  utils.py
.devcontainer/: Dockerfile  devcontainer.json
chat-las/: app.py
data/: ATLAS_Matrix.json  unified_data_model.py  veris2atlas_mapping.py
data/mapping_rules/: mitre_veris.py
ml/models/rs/shared-representation/: Cargo.toml
ml/models/rs/shared-representation/src/: graph.rs  main.rs  math.rs  optim.rs
research/: MITRE_ATLAS.md
